fix, change, add - (see desc)
fix - vertical text scroll hiding top bar/buttons
fix - bg img too large on small screens
change - text color
add - bg img rotation on input

--- a/styles.css
+++ b/styles.css
@@ -20,31 +20,47 @@ body {
 	/* Position */
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 92vh;
 	left: 0%;
-	top: 0;
+	top: 8vh;
 	margin: 0;
-	padding-top: 8vh;
+	padding: 0;
 
-	/* No visible border */
+	/* No visible border/background */
 	border: none;
 	resize: none;
 	outline: none;
-
-	/* Background + image */
-	background-color: transparent;
-	background-image: url(img.png);
-	background-repeat: no-repeat;
-	background-position: 50%;
+	background: transparent;
 
 	/* Text styling */
 	text-align: center;
 	font-size: 4vw;
+	color: #6c2601;
+}
+
+#background-image {
+	/* Position */
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	max-width: 562px;
+	max-height: 547px;
+	padding: 0;
+	margin: 0;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	z-index: -10000;
+
+	/* Image */
+	background: url('img.png') no-repeat center center;
+	background-size: contain;
+	transition: 100ms ease-out;
 }
 
 #buttons-span {
 	/* Position */
-	position: absolute;
+	position: fixed;
 	top: 0%;
 	left: 50%;
 	transform: translate(-50%, 0%);
